# home_work_drf

./: README.md  pyproject.toml
config/: settings.py  urls.py
lms/: models.py  paginators.py  serializers.py  urls.py  validators.py  views.py
lms/management/commands/: add_pay.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_url.py  0002_course_owner_lesson_owner.py  0003_alter_lesson_course_subscription.py  0004_alter_lesson_course.py
users/: admin.py  models.py  permissions.py  urls.py  views.py
users/management/commands/: c_moder.py  csu.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_alter_payments_options.py  0004_alter_payments_date_pay.py
